--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-
+<link rel="stylesheet" type="text/css" href="style.css">
+<title>This is a Title</title>
   </head>
     <body>
     </body>
